# DROUGA-CV

./: .gitignore  CLAUDE.md  CV_PIPELINE.md  JETSON_SETUP.md  ROS2_SETUP.md  run_detection.sh
ros2_ws/src/drouga_detection/: package.xml  setup.cfg  setup.py
ros2_ws/src/drouga_detection/drouga_detection/: detection_node.py
scripts/: live_detect_jetson.py  live_detect_pose.py
