<?xml version="1.0"?>
<package format="3">
  <name>drouga_detection</name>
  <version>0.1.0</version>
  <description>DROUGA mannequin detection node — YOLO + ByteTrack + ego-motion</description>
  <maintainer email="drouga@erl.com">DROUGA Team</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
